# TubeSimulator

./: main.py  pyproject.toml
config/: default.yaml  facility.yaml  heater_config.yaml
data/: facility_from_z5.csv  test_log_sample__sim.csv
data/outputs/: facility_from_z5.csv  heater_simulation_model.csv  test_log_sample__facility.csv  test_log_sample__sim.csv
src/heatersim.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/heatersim/app/: cli.py
src/heatersim/core/: models.py  simulator.py  timebase.py
src/heatersim/facility/: from_z5.py  power_calc.py
src/heatersim/io/: logging_config.py  outputs.py  recipe_csv.py
src/heatersim/viz/: heater_lamp_timeline.py  heatersim_ui_bridge.py  plot.py
tests/: test_simulator.py
